Versão 1.0 estável do Tech Challenge - Fase 2